# msg-trinket

./: Cargo.toml  Dockerfile  LICENSE  README.md
resources/: index.html
src/: main.rs
src/connection/: handle.rs  mod.rs  response.rs
src/parse/: http.rs
src/rate/: ratelimiter.rs
