[package]
name = "curl-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "futures-core"] }
chrono = "0.4.23"
futures = "0.3.26"
home = "0.5.4"
html-escape = "0.2.13"
info_utils = "1.3.1"
